# ix

./: .assumptionignore  .gitignore  .mcp.friday-brief.example.json  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  RALPH_PROBABILISTIC_GRAMMARS.md  README.md  agent-blackbox.loop-policy.json  agent-blackbox.policy.json  crate-maturity.toml
crates/ga-chatbot/: Cargo.toml
crates/ga-chatbot/src/: aggregate.rs  algebra.rs  coverage.rs  lib.rs  main.rs  mcp_bridge.rs  qa.rs  shapley.rs
crates/ga-chatbot/tests/: algebra_fixtures_match_bracelet.rs
crates/ix-acoustic-tune/: Cargo.toml
crates/ix-acoustic-tune/examples/: analyze_reference.rs
crates/ix-acoustic-tune/src/: cmaes.rs  contract.rs  features.rs  lib.rs  reference.rs  session.rs  spectral_loss.rs  transforms.rs
crates/ix-acoustic-tune/tests/: sound_match.rs
crates/ix-agent/: Cargo.toml  README.md
crates/ix-agent/examples/: ix_pipeline_mesh.rs  ix_pipeline_mesh_hub.rs
crates/ix-agent/src/: acoustic_tune.rs  flywheel.rs  handlers.rs  lib.rs  main.rs  maintain_gate.rs  ml_pipeline.rs  projection.rs  registry_bridge.rs  schema.rs  scopes.rs  server_context.rs  tools.rs  triage.rs
crates/ix-agent/tests/: autograd_run.rs  autonomous_render_audit.rs  autoresearch_smoke.rs  belief_revision.rs  cargo_deps_smoke.rs  catalog_list_smoke.rs  code_catalog_smoke.rs  dump_showcase_pipelines.rs  git_churn_smoke.rs  git_log_smoke.rs  grammar_catalog_smoke.rs  graph_error_messages.rs  grothendieck_smoke.rs  nl_to_pipeline_live.rs  parity.rs  pipeline_compile_end_to_end.rs  pipeline_compile_validator.rs  pipeline_run.rs  register_all_complexity_budget.rs  rfc_catalog_smoke.rs  scope_advertisement.rs  session_log_wiring.rs  showcase_cost_anomaly.rs  showcase_r1_migrations.rs  showcase_refactor_oracle.rs  triage_session.rs  voicings_payload_contract.rs
crates/ix-ai-annotations/: Cargo.toml
crates/ix-ai-annotations/src/: lib.rs  parser.rs  reconciler.rs  truth.rs  types.rs  walker.rs
crates/ix-ai-annotations/tests/: extract_integration.rs
crates/ix-approval/: Cargo.toml
crates/ix-approval/src/: classify.rs  lib.rs  middleware.rs  verdict.rs
crates/ix-assumption-graph/: Cargo.toml
crates/ix-assumption-graph/src/: drift.rs  fusion.rs  graph.rs  html.rs  lib.rs  node.rs  opinion.rs  temporal.rs  view.rs
crates/ix-autograd/: Cargo.toml
crates/ix-autograd/benches/: bench_ops.rs
crates/ix-autograd/examples/: minimize_linreg_mse.rs
crates/ix-autograd/src/: lib.rs  mode.rs  ops.rs  ops_fft.rs  tape.rs  tensor.rs  tool.rs
crates/ix-autograd/tests/: finite_diff.rs
crates/ix-autoresearch/: CONTEXT.md  Cargo.toml  README.md  SCHEMA.md  jsonl-event.schema.json
crates/ix-autoresearch/examples/: grammar_pinned_contract.rs  phase6_demo.rs  phase7_validate.rs
crates/ix-autoresearch/src/: cache.rs  error.rs  lib.rs  log.rs  milestones.rs  policy.rs  target_chatbot.rs  target_grammar.rs  target_optick.rs  time_budget.rs
crates/ix-autoresearch/tests/: grammar_e2e.rs  jsonl_contract.rs  kernel.rs  optick_mocked.rs
crates/ix-blast-radius/: Cargo.toml
crates/ix-blast-radius/src/: lib.rs  main.rs
crates/ix-blast-radius/tests/: cli.rs
crates/ix-bracelet/: Cargo.toml
crates/ix-bracelet/src/: action.rs  dihedral.rs  forte.rs  fourier.rs  grothendieck.rs  lib.rs  pc_set.rs  prime_form.rs  serial.rs
crates/ix-cache/: CONTRACTS.md  Cargo.toml
crates/ix-cache/src/: lib.rs  persist.rs  pubsub.rs  resp.rs  store.rs
crates/ix-catalog-core/: Cargo.toml
crates/ix-catalog-core/src/: lib.rs
crates/ix-category/: Cargo.toml
crates/ix-category/src/: instances.rs  monad.rs
crates/ix-chaos/: Cargo.toml
crates/ix-chaos/src/: attractors.rs  bifurcation.rs  control.rs  embedding.rs  fractal.rs  lib.rs  lyapunov.rs  poincare_map.rs  takagi.rs
crates/ix-code/: Cargo.toml
crates/ix-code/src/: advanced.rs  aggregate.rs  analyze.rs  catalog.rs  gates.rs  lib.rs  metrics.rs  physics.rs  semantic.rs  smells.rs  topology.rs  trajectory.rs
crates/ix-demo/: Cargo.toml
crates/ix-demo/src/: main.rs
crates/ix-duck/: Cargo.toml  build.rs
crates/ix-duck-ext/: .gitignore  Cargo.toml  README.md  append_extension_metadata.py  build.ps1  examples.sql  ix-duck.ps1
crates/ix-duck-ext/src/: lib.rs  optick.rs
crates/ix-duck/examples/: ix_chatbot_lens.rs  ix_code_health.rs  ix_dev_rhythm.rs  ix_grothendieck_lens.rs  ix_maintain_gate.rs  ix_maintain_lens.rs  ix_maintain_snapshot.rs  ix_mesh_correlate.rs  ix_ood_lens.rs  ix_quality_lens.rs  ix_repl.rs  ix_routing_lens.rs  ix_voicing_lens.rs  ix_voicing_mesh.rs  ix_voicing_mesh_nullcheck.rs  ix_voicing_similarity.rs  yield_analysis.rs
crates/ix-duck/src/: bracelet.rs  chatbot.rs  code.rs  eval.rs  graphsig.rs  grothendieck.rs  hexavalent.rs  inference.rs  lib.rs  loops.rs  maintain.rs  mesh.rs  ood.rs  routing.rs  serial.rs  sketch.rs  source.rs  supervised.rs  tablefn.rs  telemetry.rs  udf.rs
crates/ix-dynamics/: Cargo.toml
crates/ix-dynamics/src/: ik.rs  lib.rs  lie.rs  neural_ode.rs
crates/ix-embedding-diagnostics/: Cargo.toml
crates/ix-embedding-diagnostics/src/: main.rs
crates/ix-ensemble/: CONTRACTS.md  Cargo.toml
crates/ix-ensemble/src/: gradient_boosting.rs  lib.rs  random_forest.rs
crates/ix-evolution/: Cargo.toml
crates/ix-evolution/src/: differential.rs  genetic.rs  lib.rs  traits.rs
crates/ix-fractal/: Cargo.toml
crates/ix-fractal/src/: ifs.rs  lib.rs  space_filling.rs  takagi.rs
crates/ix-game/: CONTRACTS.md  Cargo.toml
crates/ix-game/src/: auction.rs  cooperative.rs  evolutionary.rs  lib.rs  mean_field.rs  mechanism.rs  nash.rs
crates/ix-governance/: Cargo.toml
crates/ix-governance/src/: constitution.rs  error.rs  feedback.rs  karnaugh.rs  lib.rs  persona.rs  policy.rs  remediation_optimizer.rs  research_anomaly.rs  tetravalent.rs  violation_pattern.rs  weight_evolution.rs
crates/ix-gpu/: Cargo.toml
crates/ix-gpu/examples/: flash_assign_spike.rs
crates/ix-gpu/src/: assign.rs  batch.rs  bsp_knn.rs  (+9 more)
crates/ix-grammar/: Cargo.toml
crates/ix-graph/: CONTRACTS.md  Cargo.toml
crates/ix-harness-tars/: Cargo.toml
(+958 files in other folders)
