[workspace]
resolver = "2"
members = [
    "crates/ix-math",
    "crates/ix-optimize",
    "crates/ix-supervised",
    "crates/ix-unsupervised",
    "crates/ix-ensemble",
    "crates/ix-nn",
    "crates/ix-rl",
    "crates/ix-evolution",
    "crates/ix-graph",
    "crates/ix-probabilistic",
    "crates/ix-io",
    "crates/ix-signal",
    "crates/ix-chaos",
    "crates/ix-game",
    "crates/ix-search",
    "crates/ix-gpu",
    "crates/ix-cache",
    "crates/ix-pipeline",
    "crates/ix-adversarial",
    "crates/ix-grammar",
    "crates/ix-agent",
    "crates/ix-dynamics",
    "crates/ix-ktheory",
    "crates/ix-topo",
    "crates/ix-category",
    "crates/ix-sedenion",
    "crates/ix-rotation",
    "crates/ix-fractal",
    "crates/ix-number-theory",
    "crates/ix-skill",
    "crates/ix-demo",
    "crates/ix-governance",
    "crates/ix-code",
    "crates/ix-dashboard",
    "crates/memristive-markov",
    "crates/ix-types",
    "crates/ix-registry",
    "crates/ix-skill-macros",
    "crates/ix-context",
    "crates/ix-loop-detect",
    "crates/ix-agent-core",
    "crates/ix-approval",
    "crates/ix-session",
    "crates/ix-fuzzy",
    "crates/ix-memory",
    "crates/ix-harness-tars",
    "crates/ix-harness-cargo",
    "crates/ix-harness-signing",
    "crates/ix-harness-clippy",
    "crates/ix-harness-github-actions",
    "crates/ix-harness-ga",
    "crates/ix-sentinel",
    "crates/ix-autograd",
    "crates/ix-registry-check",
    "crates/ix-catalog-core",
    "crates/ix-net",
    "crates/ix-sanitize",
    "crates/ix-friday-brief",
    "crates/ix-voicings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"
repository = "https://github.com/GuitarAlchemist/ix"

[workspace.dependencies]
ndarray = "0.17"
ndarray-rand = "0.16"
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
notify = "8"
csv = "1.4"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
bytes = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# Code Observatory deps (optional, behind ix-code feature gates)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
git2 = "0.20"
tempfile = "3"

# Internal crates
ix-math = { path = "crates/ix-math", version = "0.1.0" }
ix-optimize = { path = "crates/ix-optimize", version = "0.1.0" }
ix-supervised = { path = "crates/ix-supervised", version = "0.1.0" }
ix-unsupervised = { path = "crates/ix-unsupervised", version = "0.1.0" }
ix-ensemble = { path = "crates/ix-ensemble", version = "0.1.0" }
ix-nn = { path = "crates/ix-nn", version = "0.1.0" }
ix-rl = { path = "crates/ix-rl", version = "0.1.0" }
ix-evolution = { path = "crates/ix-evolution", version = "0.1.0" }
ix-graph = { path = "crates/ix-graph", version = "0.1.0" }
ix-probabilistic = { path = "crates/ix-probabilistic", version = "0.1.0" }
ix-io = { path = "crates/ix-io", version = "0.1.0" }
ix-signal = { path = "crates/ix-signal", version = "0.1.0" }
ix-chaos = { path = "crates/ix-chaos", version = "0.1.0" }
ix-game = { path = "crates/ix-game", version = "0.1.0" }
ix-search = { path = "crates/ix-search", version = "0.1.0" }
ix-gpu = { path = "crates/ix-gpu", version = "0.1.0" }
ix-cache = { path = "crates/ix-cache", version = "0.1.0" }
ix-pipeline = { path = "crates/ix-pipeline", version = "0.1.0" }
ix-adversarial = { path = "crates/ix-adversarial", version = "0.1.0" }
ix-grammar = { path = "crates/ix-grammar", version = "0.1.0" }
ix-agent = { path = "crates/ix-agent", version = "0.1.0" }
ix-dynamics = { path = "crates/ix-dynamics", version = "0.1.0" }
ix-ktheory = { path = "crates/ix-ktheory", version = "0.1.0" }
ix-topo = { path = "crates/ix-topo", version = "0.1.0" }
ix-category = { path = "crates/ix-category", version = "0.1.0" }
ix-rotation = { path = "crates/ix-rotation", version = "0.1.0" }
ix-sedenion = { path = "crates/ix-sedenion", version = "0.1.0" }
ix-fractal = { path = "crates/ix-fractal", version = "0.1.0" }
ix-number-theory = { path = "crates/ix-number-theory", version = "0.1.0" }
ix-governance = { path = "crates/ix-governance", version = "0.1.0" }
ix-code = { path = "crates/ix-code", version = "0.1.0" }
ix-types = { path = "crates/ix-types", version = "0.1.0" }
ix-registry = { path = "crates/ix-registry", version = "0.1.0" }
ix-skill-macros = { path = "crates/ix-skill-macros", version = "0.1.0" }
ix-context = { path = "crates/ix-context", version = "0.1.0" }
ix-loop-detect = { path = "crates/ix-loop-detect", version = "0.1.0" }
ix-agent-core = { path = "crates/ix-agent-core", version = "0.1.0" }
ix-autograd = { path = "crates/ix-autograd", version = "0.1.0" }
ix-approval = { path = "crates/ix-approval", version = "0.1.0" }
ix-catalog-core = { path = "crates/ix-catalog-core", version = "0.1.0" }
ix-net = { path = "crates/ix-net", version = "0.1.0" }
ix-session = { path = "crates/ix-session", version = "0.1.0" }
ix-memory = { path = "crates/ix-memory", version = "0.1.0" }
ix-fuzzy = { path = "crates/ix-fuzzy", version = "0.1.0" }
ix-sanitize = { path = "crates/ix-sanitize", version = "0.1.0" }
ix-friday-brief = { path = "crates/ix-friday-brief", version = "0.1.0" }
serde_yaml = "0.9"
parking_lot = "0.12"

# Registry infrastructure
linkme = "0.3"
schemars = "0.8"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Testing & benchmarking
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
