[package]
name = "ga-chatbot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities"]
keywords = ["chatbot", "voicings", "mcp", "guitar", "qa"]
description = "Domain-specific voicing chatbot MCP server with deterministic QA harness"

[dependencies]
ix-sanitize = { workspace = true }
ix-game = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
ix-bracelet = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "ga-chatbot"
path = "src/main.rs"
