[package]
name = "ix-ai-annotations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities", "development-tools"]
keywords = ["annotations", "hexavalent", "governance", "ai", "static-analysis"]
description = "Extracts in-source AI-authored semantic annotations (@ai:invariant, @ai:assumption, etc.) with hexavalent truth values (T/P/U/D/F/C) and certainty markers. Emits the ai-annotation contract JSONL stream consumed by the reconciler and the GA dashboard."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
ignore = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "ix-ai-annotations"
path = "src/bin/extract.rs"
