[package]
name = "ix-bracelet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["science", "mathematics"]
keywords = ["music-theory", "group-theory", "dihedral", "pitch-class", "set-theory"]
description = "Dihedral group D12 operator algebra for 12-bit pitch-class sets: unified Tn and TnI action, bracelet/necklace prime forms, group-law verification."

[dependencies]
thiserror = { workspace = true }
ix-search = { workspace = true }

[lib]
path = "src/lib.rs"
