[package]
name = "ix-category"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["algorithms", "mathematics", "science"]
keywords = ["machine-learning", "math", "algorithms"]
description = "Category theory primitives: categories, functors, natural transformations"

[dependencies]
ndarray = { workspace = true }
