[package]
name = "ix-code"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools", "algorithms"]
keywords = ["code-analysis", "metrics", "complexity", "machine-learning"]
description = "Lightweight code analysis: complexity, Halstead, SLOC metrics for ML pipelines"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
ix-catalog-core = { workspace = true }

# Optional deps for Layer 2 (semantic)
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-fsharp = { workspace = true, optional = true }
streaming-iterator = { version = "0.1", optional = true }

# Optional deps for Layer 3 (trajectory)
git2 = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

# Optional deps for Layer 4 (topology)
ix-topo = { workspace = true, optional = true }

# Optional deps for Layer 5 (gates)
ix-governance = { workspace = true, optional = true }
ix-types = { workspace = true, optional = true }

# Optional deps for Layer 6 (advanced) + Layer 7 (physics)
ix-math = { workspace = true, optional = true }
ix-ktheory = { workspace = true, optional = true }
ix-signal = { workspace = true, optional = true }
ix-fractal = { workspace = true, optional = true }
ix-chaos = { workspace = true, optional = true }
ix-graph = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
semantic = ["dep:tree-sitter", "dep:tree-sitter-rust", "dep:tree-sitter-c-sharp", "dep:tree-sitter-typescript", "dep:tree-sitter-fsharp", "dep:streaming-iterator"]
trajectory = ["dep:git2", "dep:ix-signal", "dep:thiserror"]
topology = ["dep:ix-topo"]
gates = ["dep:ix-governance", "dep:ix-types"]
advanced = ["dep:ix-math", "dep:ix-ktheory", "dep:ix-signal", "dep:ix-fractal"]
physics = ["dep:ix-chaos", "dep:ix-signal", "dep:ix-graph", "dep:ix-math"]
full = ["semantic", "trajectory", "topology", "gates", "advanced", "physics"]
