[package]
name = "ix-dynamics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["algorithms", "mathematics", "science"]
keywords = ["machine-learning", "math", "algorithms"]
description = "Continuous dynamics: Lie groups/algebras, Neural ODEs"

[dependencies]
ndarray = { workspace = true }
ix-math = { workspace = true }
thiserror = { workspace = true }
