[package]
name = "ix-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["algorithms", "mathematics", "science"]
keywords = ["machine-learning", "math", "algorithms"]
description = "Ensemble methods: random forest, boosting, bagging"

[dependencies]
ix-math = { workspace = true }
ix-supervised = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
