[package]
name = "ix-evolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["algorithms", "mathematics", "science"]
keywords = ["machine-learning", "math", "algorithms"]
description = "Evolutionary algorithms: genetic algorithms, differential evolution, GP"

[dependencies]
ix-math = { workspace = true }
ix-optimize = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
