[package]
name = "ix-fractal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["algorithms", "mathematics", "science"]
keywords = ["machine-learning", "math", "algorithms"]
description = "Fractal curves: Takagi, de Rham, IFS, L-systems, Hilbert/Peano/Z-order space-filling curves"

[dependencies]
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
