[package]
name = "ix-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["algorithms", "data-structures"]
keywords = ["governance", "tetravalent-logic", "constitution", "persona"]
description = "Demerzel governance: constitutions, personas, policies, tetravalent logic"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
ix-quality-trend = { workspace = true }
